--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@backstage/core-components": "^0.13.2",
+    "@backstage/plugin-catalog": "^1.11.2",
     "@backstage/core-plugin-api": "^1.5.2",
     "@backstage/theme": "^0.4.0",
     "@material-ui/core": "^4.9.13",
