--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@backstage/core-components": "^0.13.2",
     "@backstage/plugin-catalog": "^1.11.2",
     "@backstage/core-plugin-api": "^1.5.2",
+    "@backstage/plugin-scaffolder": "^1.14.0",
     "@backstage/theme": "^0.4.0",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
