--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "prepack": "backstage-cli package prepack",
     "postpack": "backstage-cli package postpack",
     "backstage:bump": "backstage-cli versions:bump",
+    "prettier:check": "prettier --check .",
+    "prettier:fix": "prettier --write .",
     "bump": "yarn run standard-version --no-verify --releaseCommitMessageFormat 'v{{currentTag}}'"
   },
   "dependencies": {
@@ -69,10 +71,22 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^14.0.0",
     "@types/node": "*",
+    "@spotify/prettier-config": "^14.1.6",
+    "prettier": "^2.2.1",
     "msw": "^1.0.0",
     "cross-fetch": "^3.1.5",
     "react-router": "6.0.0-beta.0",
     "standard-version": "^9.5.0"
+  },
+  "prettier": "@spotify/prettier-config",
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,mjs,cjs}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
   },
   "files": [
     "dist",
