--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
-  "private": false,
   "publishConfig": {
     "access": "public",
     "main": "dist/index.esm.js",
@@ -31,6 +30,7 @@
       "src/components/types.ts"
     ]
   },
+  "sideEffects": false,
   "scripts": {
     "start": "backstage-cli package start",
     "dev": "concurrently \"yarn start\" \"yarn start-backend\"",
@@ -49,40 +49,43 @@
     "bump": "yarn run standard-version --no-verify --releaseCommitMessageFormat 'v{{currentTag}}'"
   },
   "dependencies": {
-    "@backstage/core-components": "^0.13.4",
-    "@backstage/plugin-catalog-react": "^1.8.3",
-    "@backstage/catalog-model": "^1.4.1",
-    "@backstage/core-plugin-api": "^1.5.3",
-    "@backstage/plugin-catalog": "^1.12.4",
-    "@backstage/plugin-scaffolder": "^1.14.4",
-    "@backstage/plugin-scaffolder-react": "^1.6.1",
-    "@backstage/theme": "^0.4.1",
+    "@backstage/catalog-model": "^1.7.0",
+    "@backstage/config": "^1.2.0",
+    "@backstage/core-components": "^0.15.0",
+    "@backstage/core-plugin-api": "^1.9.4",
+    "@backstage/plugin-catalog": "^1.23.1",
+    "@backstage/plugin-catalog-react": "^1.13.1",
+    "@backstage/plugin-scaffolder": "^1.25.1",
+    "@backstage/plugin-scaffolder-react": "^1.12.1",
+    "@backstage/types": "^1.1.1",
+    "@internal/backstage-plugin-basic-components-react": "^0.1.0",
     "@material-ui/core": "^4.9.13",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@types/pluralize": "^0.0.33",
     "lodash": "^4.17.21",
-    "react-use": "^17.2.4"
+    "pluralize": "^8.0.0",
+    "react-use": "^17.2.4",
+    "zod": "^3.23.8"
   },
   "peerDependencies": {
-    "react": "^16.13.1 || ^17.2.0"
+    "react": "^16.13.1 || ^17.2.0",
+    "react-router": "6.0.0-beta.0 || ^6.3.0"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.22.12",
-    "@backstage/core-app-api": "^1.9.1",
-    "@backstage/dev-utils": "^1.0.20",
-    "@backstage/test-utils": "^1.4.2",
+    "@backstage/cli": "^0.27.1",
+    "@backstage/core-app-api": "^1.15.0",
+    "@backstage/dev-utils": "^1.1.1",
+    "@backstage/test-utils": "^1.6.0",
     "@spotify/prettier-config": "^14.1.6",
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^14.0.0",
+    "@types/lodash": "^4.14.202",
     "@types/node": "*",
+    "@types/pluralize": "^0.0.33",
     "cross-fetch": "^3.1.5",
     "msw": "^1.0.0",
-    "@types/pluralize": "^0.0.33",
-    "@types/lodash": "^4.14.202",
     "prettier": "^2.2.1",
-    "react-router": "6.0.0-beta.0",
     "standard-version": "^9.5.0"
   },
   "prettier": "@spotify/prettier-config",
